force-app/main/default/objects/PWChrono_Feature_Settings__c/PWChrono_Feature_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description
  >Feature toggles and configurable thresholds for PWChrono functionality. Can be customized at organization, profile, or user level.</description>
    <label>Feature Settings</label>
</CustomObject>