force-app/main/default/objects/PWChrono_Feature_Settings__c/fields/Advance_Leave_Application_Days__c.field-meta.xml
<CustomField>
    <fullName>Advance_Leave_Application_Days__c</fullName>
    <defaultValue>2</defaultValue>
    <description
  >Minimum number of days in advance employees must apply for leave (except emergency). Set to 0 for no restriction.</description>
    <inlineHelpText
  >For planned leave, employees must apply at least this many days before leave start date (0 = same-day allowed).</inlineHelpText>
    <label>Advance Leave Application (Days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>