force-app/main/default/objects/PWChrono_Feature_Settings__c/fields/Allow_Backdated_Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Allow_Backdated_Leave_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <description
  >Number of days in the past employees can apply for leave. Set to 0 to prevent backdated leave applications.</description>
    <inlineHelpText
  >Employees can apply for leave up to this many days in the past (0 = only future dates allowed).</inlineHelpText>
    <label>Allow Backdated Leave (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>