force-app/main/default/objects/PWChrono_Feature_Settings__c/fields/Auto_Approve_Attendance_Request__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approve_Attendance_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Automatically approve attendance regularization requests within grace period without manager approval.</description>
    <inlineHelpText
  >When checked, attendance requests within grace period (configured in PWChrono Settings) will be auto-approved.</inlineHelpText>
    <label>Auto Approve Attendance Request</label>
    <type>Checkbox</type>
</CustomField>