force-app/main/default/objects/PWChrono_Feature_Settings__c/fields/Enable_Leave_Encashment__c.field-meta.xml
<CustomField>
    <fullName>Enable_Leave_Encashment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allow employees to encash unused leave balances. If disabled, encashment functionality will be hidden.</description>
    <inlineHelpText>Check to enable leave encashment feature for employees to convert unused leaves to cash.</inlineHelpText>
    <label>Enable Leave Encashment</label>
    <type>Checkbox</type>
</CustomField>