force-app/main/default/objects/PWChrono_Feature_Settings__c/fields/Enable_Manager_Delegation__c.field-meta.xml
<CustomField>
    <fullName>Enable_Manager_Delegation__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Allow managers to delegate their approval authority to another manager temporarily.</description>
    <inlineHelpText
  >When enabled, managers can assign a delegate to approve requests during their absence.</inlineHelpText>
    <label>Enable Manager Delegation</label>
    <type>Checkbox</type>
</CustomField>