force-app/main/default/objects/PWChrono_Feature_Settings__c/fields/Enable_Payroll_Module__c.field-meta.xml
<CustomField>
    <fullName>Enable_Payroll_Module__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Enable or disable the entire payroll functionality including salary structures and slip generation.</description>
    <inlineHelpText
  >Uncheck if your organization uses external payroll system and doesn&apos;t need in-app payroll.</inlineHelpText>
    <label>Enable Payroll Module</label>
    <type>Checkbox</type>
</CustomField>