force-app/main/default/objects/PWChrono_Feature_Settings__c/fields/Enable_Performance_Module__c.field-meta.xml
<CustomField>
    <fullName>Enable_Performance_Module__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable performance management features including appraisals and goal tracking.</description>
    <inlineHelpText>Uncheck if your organization doesn&apos;t use formal performance review process.</inlineHelpText>
    <label>Enable Performance Module</label>
    <type>Checkbox</type>
</CustomField>