force-app/main/default/objects/PWChrono_Feature_Settings__c/fields/Enable_Recruitment_Module__c.field-meta.xml
<CustomField>
    <fullName>Enable_Recruitment_Module__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable recruitment features including job postings, applicant tracking, and interviews.</description>
    <inlineHelpText>Uncheck if your organization uses external ATS and doesn&apos;t need recruitment functionality.</inlineHelpText>
    <label>Enable Recruitment Module</label>
    <type>Checkbox</type>
</CustomField>