force-app/main/default/objects/PWChrono_Feature_Settings__c/fields/Enable_Self_Service_Portal__c.field-meta.xml
<CustomField>
    <fullName>Enable_Self_Service_Portal__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Enable employee self-service features for leave application, attendance viewing, and payslip access.</description>
    <inlineHelpText
  >Allows employees to access their own PWChrono data and submit requests through portal.</inlineHelpText>
    <label>Enable Self Service Portal</label>
    <type>Checkbox</type>
</CustomField>