force-app/main/default/objects/PWChrono_Feature_Settings__c/fields/Enable_Training_Module__c.field-meta.xml
<CustomField>
    <fullName>Enable_Training_Module__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable training management features including programs, events, and attendance tracking.</description>
    <inlineHelpText>Uncheck if your organization doesn&apos;t track employee training internally.</inlineHelpText>
    <label>Enable Training Module</label>
    <type>Checkbox</type>
</CustomField>