force-app/main/default/objects/PWChrono_Feature_Settings__c/fields/Notification_Email_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Send email notifications for leave approvals, rejections, attendance requests, and salary slip generation.</description>
    <inlineHelpText>When enabled, automatic email notifications will be sent for all PWChrono transactions.</inlineHelpText>
    <label>Notification Email Enabled</label>
    <type>Checkbox</type>
</CustomField>