force-app/main/default/objects/PWChrono_Feature_Settings__c/fields/Require_Medical_Certificate_Days__c.field-meta.xml
<CustomField>
    <fullName>Require_Medical_Certificate_Days__c</fullName>
    <defaultValue>3</defaultValue>
    <description
  >Number of consecutive sick leave days after which medical certificate becomes mandatory. Set to 0 to disable requirement.</description>
    <inlineHelpText
  >Sick leaves longer than this many days will require medical certificate attachment (0 = never required).</inlineHelpText>
    <label>Require Medical Certificate (Days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>